# ibus-hangul

./: CMakeLists.txt  README-cmake.md  config.h.cmake
data/: CMakeLists.txt
setup/: CMakeLists.txt  Makefile.am  ibus-setup-hangul.desktop.in.in  main.py  setup.ui
src/: CMakeLists.txt  engine.c
tests/: CMakeLists.txt
